Added js and css for burger

--- a/index.html
+++ b/index.html
@@ -46,25 +46,26 @@
                     </defs>
                 </svg>
             </div>
+            <div class="burger">
+                <div></div>
+            </div>
             <nav class="menu">
-                <a href="" class="menu"><h3 class="menu">Menu</h3></a>
-                <a href="#categories" class="menu"><h3 class="menu">Products</h3></a>
-                <a href="#about-us" class="menu"><h3 class="menu">About us</h3></a>
-                <a href="#reviews" class="menu"><h3 class="menu">Reviews</h3></a>
-                <a href="#contacts" class="menu"><h3 class="menu">Contacts</h3></a>
-                <div class="cart">
-                    <a href="" class="menu"><h3 class="menu">Cart</h3></a>
-                    <a href="" class="menu"><svg class="cart" width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M10.3677 24.8889C11.3342 24.8889 12.1177 24.1054 12.1177 23.1389C12.1177 22.1724 11.3342 21.3889 10.3677 21.3889C9.40118 21.3889 8.61768 22.1724 8.61768 23.1389C8.61768 24.1054 9.40118 24.8889 10.3677 24.8889Z" fill="white"/>
-                    <path d="M21 24.8889C21.9665 24.8889 22.75 24.1054 22.75 23.1389C22.75 22.1724 21.9665 21.3889 21 21.3889C20.0335 21.3889 19.25 22.1724 19.25 23.1389C19.25 24.1054 20.0335 24.8889 21 24.8889Z" fill="white"/>
-                    <path d="M17.5545 5.44447C17.5191 5.18671 17.5009 4.92688 17.5001 4.66669C17.5009 4.40651 17.5191 4.14668 17.5545 3.88892H8.93677L9.44232 5.44447H17.5545Z" fill="white"/>
-                    <path d="M23.3334 10.5H23.0067L22.0345 14.7778H10.3678L6.81338 3.52331C6.77493 3.40389 6.70817 3.29554 6.61878 3.20751C6.52939 3.11948 6.42004 3.05437 6.30005 3.01775L3.11116 2.03775C3.0131 2.00762 2.91007 1.9971 2.80795 2.00679C2.70583 2.01647 2.60662 2.04618 2.51598 2.09421C2.33292 2.1912 2.1959 2.35695 2.13505 2.55498C2.07419 2.753 2.0945 2.9671 2.1915 3.15015C2.2885 3.33321 2.45424 3.47023 2.65227 3.53109L5.44449 4.38664L9.01449 15.6644L7.73893 16.7066L7.63782 16.8078C7.32231 17.1714 7.14347 17.6336 7.13211 18.1149C7.12075 18.5962 7.27759 19.0663 7.5756 19.4444C7.78759 19.7022 8.05697 19.9068 8.3622 20.0419C8.66742 20.1769 9.00002 20.2387 9.33338 20.2222H22.3145C22.5208 20.2222 22.7186 20.1403 22.8645 19.9944C23.0103 19.8485 23.0923 19.6507 23.0923 19.4444C23.0923 19.2381 23.0103 19.0403 22.8645 18.8944C22.7186 18.7486 22.5208 18.6666 22.3145 18.6666H9.20893C9.11937 18.6636 9.03211 18.6375 8.95558 18.5908C8.87905 18.5442 8.81584 18.4786 8.77205 18.4005C8.72827 18.3223 8.70538 18.2341 8.70562 18.1445C8.70585 18.0549 8.72919 17.9668 8.77338 17.8889L10.6478 16.3333H22.6567C22.8365 16.3377 23.0123 16.2797 23.1541 16.169C23.2959 16.0584 23.395 15.9021 23.4345 15.7266L24.6556 10.3522C24.2219 10.4517 23.7783 10.5012 23.3334 10.5Z" fill="white"/>
-                    <path d="M23.3332 8.55561C25.481 8.55561 27.2221 6.8145 27.2221 4.66672C27.2221 2.51895 25.481 0.777832 23.3332 0.777832C21.1855 0.777832 19.4443 2.51895 19.4443 4.66672C19.4443 6.8145 21.1855 8.55561 23.3332 8.55561Z" fill="white"/>
-                    </svg>
-                    </a>
-                </div>
+                <a href="" class="menu-link"><h3 class="menu-heading">Menu</h3></a>
+                <a href="#categories" class="menu-link"><h3 class="menu-heading">Products</h3></a>
+                <a href="#about-us" class="menu-link"><h3 class="menu-heading">About us</h3></a>
+                <a href="#reviews" class="menu-link"><h3 class="menu-heading">Reviews</h3></a>
+                <a href="#contacts" class="menu-link"><h3 class="menu-heading">Contacts</h3></a>
+                <a href="#contacts" class="menu-link"><h3 class="menu-heading">Cart</h3></a>                
             </nav>
         </div>
+        <nav class="burger-menu">
+            <a href="" class="menu-link"><h3 class="menu-heading">Menu</h3></a>
+            <a href="#categories" class="menu-link"><h3 class="menu-heading">Products</h3></a>
+            <a href="#about-us" class="menu-link"><h3 class="menu-heading">About us</h3></a>
+            <a href="#reviews" class="menu-link"><h3 class="menu-heading">Reviews</h3></a>
+            <a href="#contacts" class="menu-link"><h3 class="menu-heading">Contacts</h3></a>
+            <a href="#contacts" class="menu-link"><h3 class="menu-heading">Cart</h3></a>
+        </nav>
     </header>
     <main>
         <div class="main-page">
@@ -374,5 +375,7 @@
             </div>
         </div>
     </footer>
+
+<script src="script/script.js"></script>
 </body>
 </html>
